# fetal-mri

./: Dockerfile  PLAN.md  PROGRESS.md  README.md  SPEC.md  TEST.md  completion_audit.md  ideas.md  package-lock.json  package.json  pnpm-lock.yaml  publication_handoff_checklist.md  pyproject.toml  reader_study_protocol.md  source_data_final_lock.md  source_verification_dossier.md  validation_analysis_lock.md  validation_data_dictionary.md  vite.config.ts
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AICopilot.tsx  AuxiliaryMeasurementRow.tsx  DifferentialCard.tsx  ParameterRow.tsx  QualitativeFindingRow.tsx  ZScoreBar.tsx
client/src/contexts/: ThemeContext.tsx
client/src/lib/: architecture.test.ts  biometry.test.ts  biometry.ts  client-shell.test.ts  clipboard.test.ts  clipboard.ts  genai.test.ts  genai.ts  methodology-page.test.ts  report.ts  source-detail-ui.test.ts  validation-data-schema.test.ts  validation-data-schema.ts  validation-metrics.test.ts  validation-metrics.ts  validation-page.test.ts  workflow-ui.test.ts
python_app/: __init__.py  biometry.py  genai.py  main.py  registry.py
python_app/clinical_knowledge/: biometric_reference_atlas.txt  fetal_mri_report_template.txt  validation_guardrails.txt
python_app/pipelines/: deident.py  rag_assistant.py
python_app/static/: htmx.min.js  tailwind.css
python_app/templates/: index.html
server/: index.ts
server/routes/: rag.ts  study.ts
validation_export_templates/: case_log.csv  diagnostic_labels.csv  measurement_rows.csv  reader_study_rows.csv  report_audit_rows.csv
(+5 files in other folders)
