[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetal-brain-mri-python-app"
version = "0.1.0"
description = "Offline-capable FastAPI/Jinja app for the fetal brain MRI biometry calculator."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "numpy>=2.0",
  "scipy>=1.14",
  "uvicorn[standard]>=0.30",
  pydicom = "^2.4.0"
]

[project.optional-dependencies]
genai = [
  "biopython>=1.84",
]
standalone = [
  "pyinstaller>=6.0",
]

[tool.setuptools]
packages = ["python_app", "python_app.static", "python_app.templates"]

[tool.setuptools.package-data]
python_app = ["templates/*.html", "static/*"]

[tool.pyinstaller]
entry-point = "python_app.main:app"
